# pico-ice-ros2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  font.h  main.c  pmod_oledrgb.c  pmod_oledrgb.h  pmod_spi.c  usb_descriptors.c  wishbone_serial.py
amaranth/: debouncer.py  install_dependencies.sh  main.py  nec_ir_decoder.py  pico_ice.py  pico_ice_board.py  pico_ice_pmod.py  pico_ice_pmod_demo.py  pmod_7seg.py  spi_peripheral.py  synthesize.py  top.py
include/: pmod_oledrgb.h  pmod_spi.h
ros2/: README.md
ros2/src/pico_ice/: package.xml  setup.cfg  setup.py
ros2/src/pico_ice/pico_ice/: publisher_member_function.py  subscriber_member_function.py  wishbone_serial.py
src/: main.c  pmod_oledrgb.c  pmod_spi.c
uf2/: pico_ice_pmod.012d41c.uf2  pico_micro_ros_example.uf2
